scripts/nullaway/annotator/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8.txt
../annotator/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/entities/Theoriestunde.java:41: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return this.fahrlehrerin;
		^
    (see http://t.uber.com/nullaway )
../annotator/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/Systemereignis.java:59: error: [NullAway] dereferenced expression nachricht is @Nullable
		return nachricht.name();
		                ^
    (see http://t.uber.com/nullaway )
../annotator/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/entities/Fahrschueler.java:57: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return this.fahrlehrerindaten;
		^
    (see http://t.uber.com/nullaway )
../annotator/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/controls/Ressourcenverwaltung.java:95: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return null;
		^
    (see http://t.uber.com/nullaway )
../annotator/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/controls/Ressourcenverwaltung.java:111: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return null;
		^
    (see http://t.uber.com/nullaway )
../annotator/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/controls/Unterrichtsverwaltung.java:45: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return null;
		^
    (see http://t.uber.com/nullaway )
../annotator/url529c09a30c_kianyangchn_DriveNow_tgz-pJ8-drivenow_tests_TestJ8/src/drivenow/controls/Unterrichtsverwaltung.java:294: error: [NullAway] dereferenced expression stunde is @Nullable
			int thema = stunde.get_thema();
			                  ^
    (see http://t.uber.com/nullaway )
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
7 errors
